finish stock_input e stock_output API documentation
